Полностью сверстано меню и экран и адаптированы

--- a/index.html
+++ b/index.html
@@ -4,9 +4,72 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+	<meta name="keywords" content="Фабрика Скинали">
+	<meta name="description" content="Фабрика Скинали является одной из крупнейших компаний мира">
+	<meta name="author" content="adamaka47">
+	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+	<link rel="stylesheet" href="css/main.css">
 	<title>Московское Скинави</title>
 </head>
 <body>
 	
+
+	<header class="header" id="header">
+		<nav class="header_nav">
+			<div class="header_mob">
+				<div class="container">
+					<ul>
+						<li><a href="#" class="menu_mob_link">Главная</a></li>
+						<li><a href="#" class="menu_mob_link">Продукция</a></li>
+						<li><a href="#" class="menu_mob_link">Каталог</a></li>
+						<li><a href="#" class="menu_mob_link">Примеры работ</a></li>
+						<li><a href="#" class="menu_mob_link">Примерка</a></li>
+						<li><a href="#" class="menu_mob_link">Доставка</a></li>
+						<li><a href="#" class="menu_mob_link">О скинали</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="container">
+				<div class="header_flex">
+					<button class="header_button">
+						<span class="header_button_line"></span>
+						<span class="header_button_line"></span>
+						<span class="header_button_line"></span>
+					</button>
+					<div class="header_logo">
+						<strong>Фабрика скинави №1</strong>
+						<div class="header_descr">ведущий производитель скинави</div>
+					</div>
+					<div class="header_mobile">
+						<a href="tel:+7999123456">+7999123456</a>
+						<div class="header_mobile_descr">без выходных 9-21</div>
+					</div>
+					<div class="header_stat">
+						<a href="tel:+7999123456">+7999123456</a>
+						<a class="header_stat _descr" href="mailto:info@mail.ru">info@mail.ru</a>
+					</div>
+					<button class="button header_cons">Получить консультацию</button>
+				</div>
+			</div>
+		</nav>
+		<div class="view">
+			<div class="container">
+				<h1 class="view_title">
+					Гарантия минимальной цены на скинали
+				</h1>
+				<p class="view_text">от 3 000 рублей</p>
+				<button class="button view_button">
+					Заказать скинали
+				</button>
+			</div>
+		</div>
+	</header>
+
+	<script
+	  src="https://code.jquery.com/jquery-3.4.1.min.js"
+	  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+	  crossorigin="anonymous"></script>
+	  <script src="js/script.js"></script>
 </body>
 </html>
