Сверстал вторую адаптивную форму

--- a/index.html
+++ b/index.html
@@ -66,6 +66,68 @@
 		</div>
 	</header>
 
+	<main>
+		<section class="action bg" id="action">
+			<div class="container">
+				<div class="action_block">
+					<div class="action_item">
+						<h2 class="action_title">
+							Оставьте заявку на расчет
+						</h2>
+						<p class="action_text">и получите скидку 30% на изготовление скинали или фартука для кухни</p>
+						<form method="POST" class="action_form">
+							<div class="action_row">
+								<div class="action_item">
+									<label for="#" class="action_label">
+										Вид стекла
+									</label>
+									<input type="text" class="action_input">
+								</div>
+								<div class="action_item">
+									<label for="#" class="action_label">
+										Ширина, см
+									</label>
+									<input type="text" class="action_input">
+								</div>
+								<div class="action_item">
+									<label for="#" class="action_label">
+										Высота, см
+									</label>
+									<input type="text" class="action_input">
+								</div>
+					
+							</div>
+							<div class="action_row action_checks">
+								<div class="action_checks">
+									<input type="radio" name="radios" id="montage" class="action_checkbox" checked>
+									<label for="montage" class="action_checkbox_label">
+									Монтаж</label>
+								</div>
+								<div class="action_checks">
+									<input type="radio" name="radios" id="deliv" class="action_checkbox">
+									<label for="deliv" class="action_checkbox_label">
+									Доставка</label>
+								</div>
+							</div>
+							<div class="action_row">
+								<div class="action_item">
+									<input type="text" placeholder="Ваше имя" class="action_input">
+								</div>
+									<div class="action_item">
+										<input type="tel" placeholder="Ваш телефон" class="action_input">
+									</div>
+									<div class="action_item">
+										<input type="submit" placeholder="Ваше имя" class="action_input action_button">
+									</div>
+								</div>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</section>
+	</main>
+
 
 
 	<script type="text/javascript" src="https://spikmi.com/Widget?Id=987"></script>
