Сделал еще 5 адаптивных блока

--- a/index.html
+++ b/index.html
@@ -126,6 +126,296 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="section features" id="features">
+			<div class="container">
+				<h2 class="section_title">Наши преимущества</h2>
+				<div class="features_items">
+					<div class="features_item">
+						<img src="img/feature-1.png" alt="Преимущества" class="features_img">
+						<h5 class="features_text">Бесплатный<br>дизайн-макет</h5>
+					</div>
+					<div class="features_item">
+						<img src="img/feature-2.png" alt="Преимущества" class="features_img">
+						<h5 class="features_text">Пожизненна<br> гарантия</h5>
+					</div>
+					<div class="features_item">
+						<img src="img/feature-3.png" alt="Преимущества" class="features_img">
+						<h5 class="features_text">Большой каталог<br>изображений</h5>
+					</div>
+					<div class="features_item">
+						<img src="img/feature-4.png" alt="Преимущества" class="features_img">
+						<h5 class="features_text">100% соблюдение<br>сроков</h5>
+					</div>
+					<div class="features_item">
+						<img src="img/feature-5.png" alt="Преимущества" class="features_img">
+						<h5 class="features_text">Собственное<br>производство</h5>
+					</div>
+					<div class="features_item">
+						<img src="img/feature-6.png" alt="Преимущества" class="features_img">
+						<h5 class="features_text">Минимальная цена в городе<br>от 1600 р метр</h5>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="section catalog" id="catalog">
+			<div class="container">
+				<h2 class="section_title">Наши скинали</h2>
+				<div class="catalog_items">
+					<div class="catalog_item">
+						<img src="img/catalog_1.png" alt="Каталог">
+						<span class="catalog_type">Коллажи</span>
+						<div class="catalog_button">
+							<button class="catalog_button_first">Примерить онлайн</button>
+							<button class="catalog_button_second">Заказать</button>
+							<button class="catalog_button_third"><img src="img/like.png" alt="Like"></button>
+						</div>
+					</div>
+					<div class="catalog_item">
+						<img src="img/catalog_2.png" alt="Каталог">
+						<span class="catalog_type">Абстракция</span>
+						<div class="catalog_button">
+							<button class="catalog_button_first">Примерить онлайн</button>
+							<button class="catalog_button_second">Заказать</button>
+							<button class="catalog_button_third"><img src="img/like.png" alt="Like"></button>
+						</div>
+					</div>
+					<div class="catalog_item">
+						<img src="img/catalog_3.png" alt="Каталог">
+						<span class="catalog_type">Коллажи</span>
+						<div class="catalog_button">
+							<button class="catalog_button_first">Примерить онлайн</button>
+							<button class="catalog_button_second">Заказать</button>
+							<button class="catalog_button_third"><img src="img/like.png" alt="Like"></button>
+						</div>
+					</div>
+					<div class="catalog_item">
+						<img src="img/catalog_4.png" alt="Каталог">
+						<span class="catalog_type">Авторская коллекция</span>
+						<div class="catalog_button">
+							<button class="catalog_button_first">Примерить онлайн</button>
+							<button class="catalog_button_second">Заказать</button>
+							<button class="catalog_button_third"><img src="img/like.png" alt="Like"></button>
+						</div>
+					</div>
+					<div class="catalog_item">
+						<img src="img/catalog_5.png" alt="Каталог">
+						<span class="catalog_type">Коллажи</span>
+						<div class="catalog_button">
+							<button class="catalog_button_first">Примерить онлайн</button>
+							<button class="catalog_button_second">Заказать</button>
+							<button class="catalog_button_third"><img src="img/like.png" alt="Like"></button>
+						</div>
+					</div>
+					<div class="catalog_item">
+						<img src="img/catalog_6.png" alt="Каталог">
+						<span class="catalog_type">Авторская коллекция</span>
+						<div class="catalog_button">
+							<button class="catalog_button_first">Примерить онлайн</button>
+							<button class="catalog_button_second">Заказать</button>
+							<button class="catalog_button_third"><img src="img/like.png" alt="Like"></button>
+						</div>
+					</div>
+					<div class="catalog_item">
+						<img src="img/catalog_7.png" alt="Каталог">
+						<span class="catalog_type">Авторская коллекция</span>
+						<div class="catalog_button">
+							<button class="catalog_button_first">Примерить онлайн</button>
+							<button class="catalog_button_second">Заказать</button>
+							<button class="catalog_button_third"><img src="img/like.png" alt="Like"></button>
+						</div>
+					</div>
+					<div class="catalog_item">
+						<img src="img/catalog_8.png" alt="Каталог">
+						<span class="catalog_type">Абстракция</span>
+						<div class="catalog_button">
+							<button class="catalog_button_first">Примерить онлайн</button>
+							<button class="catalog_button_second">Заказать</button>
+							<button class="catalog_button_third"><img src="img/like.png" alt="Like"></button>
+						</div>
+					</div>
+				</div>
+				<a href="#" class="catalog_btn">Смотреть весь каталог скинали</a>
+				<p class="catalog_text">Более 3000 изображений скинали в 25 рубриках</p>
+			</div>
+		</section>
+
+		<section class="section blog">
+			<div class="container">
+				<div class="blog_top">
+					<h3 class="blog_title">
+						Полезное или что важно знать о скинали...
+					</h3>
+					<a href="#" class="blog_link">Читать все статьи</a>
+				</div>
+				<div class="blog_items">
+					<div class="blog_item">
+						<div class="blog_img">
+							<img src="img/blog_1.png" alt="Blog">
+						</div>
+						<p class="blog_text">Виды стекла</p>
+					</div>
+					<div class="blog_item">
+						<div class="blog_img">
+							<img src="img/blog_2.png" alt="Blog">
+						</div>
+						<p class="blog_text">Виды печати</p>
+					</div>
+					<div class="blog_item">
+						<div class="blog_img">
+							<img src="img/blog_3.png" alt="Blog">
+						</div>
+						<p class="blog_text">Виды монтажа</p>
+					</div>
+					<div class="blog_item">
+						<div class="blog_img">
+							<img src="img/blog_4.png" alt="Blog">
+						</div>
+						<p class="blog_text">Виды вопросов</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="section price">
+			<div class="container">
+				<div class="section_title">Цены и виды скинали</div>
+				<div class="price_items">
+					<div class="price_item">
+						<div class="price_img"><img src="img/price-1.png" alt="Виды скинали"></div>
+						<div class="price_text">
+							<div class="price_type">
+								<h4 class="price_type_title">Прозрачные</h4>
+								<span class="price_type_cost">От 3 500 р/м^2</span>
+							</div>
+							<div class="price_btn"><button>Оставить Заявку</button></div>
+						</div>
+					</div>
+					<div class="price_item">
+						<div class="price_img"><img src="img/price-2.png" alt="Виды скинали"></div>
+						<div class="price_text">
+							<div class="price_type">
+								<h4 class="price_type_title">Однотонные</h4>
+								<span class="price_type_cost">От 3 500 р/м^2</span>
+							</div>
+							<div class="price_btn"><button>Оставить Заявку</button></div>
+						</div>
+					</div>
+					<div class="price_item">
+						<div class="price_img"><img src="img/price-3.png" alt="Виды скинали"></div>
+						<div class="price_text">
+							<div class="price_type">
+								<h4 class="price_type_title">Одноцветные</h4>
+								<span class="price_type_cost">От 3 500 р/м^2</span>
+							</div>
+							<div class="price_btn"><button>Оставить Заявку</button></div>
+						</div>
+					</div>
+					<div class="price_item">
+						<div class="price_img"><img src="img/price-4.png" alt="Виды скинали"></div>
+						<div class="price_text">
+							<div class="price_type">
+								<h4 class="price_type_title">Зеркальные</h4>
+								<span class="price_type_cost">От 3 500 р/м^2</span>
+							</div>
+							<div class="price_btn"><button>Оставить Заявку</button></div>
+						</div>
+					</div>
+					<div class="price_item">
+						<div class="price_img"><img src="img/price-5.png" alt="Виды скинали"></div>
+						<div class="price_text">
+							<div class="price_type">
+								<h4 class="price_type_title">Подстветная</h4>
+								<span class="price_type_cost">От 3 500 р/м^2</span>
+							</div>
+							<div class="price_btn"><button>Оставить Заявку</button></div>
+						</div>
+					</div>
+					<div class="price_item">
+						<div class="price_img"><img src="img/price-6.png" alt="Виды скинали"></div>
+						<div class="price_text">
+							<div class="price_type">
+								<h4 class="price_type_title">Световые</h4>
+								<span class="price_type_cost">От 3 500 р/м^2</span>
+							</div>
+							<div class="price_btn"><button>Оставить Заявку</button></div>
+						</div>
+					</div>
+					<div class="price_item">
+						<div class="price_img"><img src="img/price-7.png" alt="Виды скинали"></div>
+						<div class="price_text">
+							<div class="price_type">
+								<h4 class="price_type_title">Картинные</h4>
+								<span class="price_type_cost">От 3 500 р/м^2</span>
+							</div>
+							<div class="price_btn"><button>Оставить Заявку</button></div>
+						</div>
+					</div>
+					<div class="price_item">
+						<div class="price_img"><img src="img/price-8.png" alt="Виды скинали"></div>
+						<div class="price_text">
+							<div class="price_type">
+								<h4 class="price_type_title">Глинистые</h4>
+								<span class="price_type_cost">От 3 500 р/м^2</span>
+							</div>
+							<div class="price_btn"><button>Оставить Заявку</button></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="section step" id="step">
+			<div class="container">
+				<h2 class="section_title">Этапы работ</h2>
+				<div class="step_items">
+					<div class="step_item">
+						<img src="img/step-1.png" alt="Этап" class="step_img">
+						<h4 class="step_item_title">
+							Заявка
+						</h4>
+						<p class="step_item_text">Вы оставляете заявку на нашем сайте или по телефону</p>
+					</div>
+					<div class="step_item">
+						<img src="img/step-2.png" alt="Этап" class="step_img">
+						<h4 class="step_item_title">
+							Договор
+						</h4>
+						<p class="step_item_text">Вы оставляете заявку на нашем сайте или по телефону</p>
+					</div>
+					<div class="step_item">
+						<img src="img/step-3.png" alt="Этап" class="step_img">
+						<h4 class="step_item_title">
+							Замер
+						</h4>
+						<p class="step_item_text">Вы оставляете заявку на нашем сайте или по телефону</p>
+					</div>
+					<div class="step_item">
+						<img src="img/step-4.png" alt="Этап" class="step_img">
+						<h4 class="step_item_title">
+							Дизайн
+						</h4>
+						<p class="step_item_text">Вы оставляете заявку на нашем сайте или по телефону</p>
+					</div>
+					<div class="step_item">
+						<img src="img/step-5.png" alt="Этап" class="step_img">
+						<h4 class="step_item_title">
+							Производство
+						</h4>
+						<p class="step_item_text">Вы оставляете заявку на нашем сайте или по телефону</p>
+					</div>
+					<div class="step_item">
+						<img src="img/step-6.png" alt="Этап" class="step_img">
+						<h4 class="step_item_title">
+							Монтаж
+						</h4>
+						<p class="step_item_text">Вы оставляете заявку на нашем сайте или по телефону</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
 	</main>
 
 
