--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
 	<meta name="author" content="adamaka47">
 	<link rel="icon" href="img/favicon.png" type="image/x-icon" />
 	<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+	<style>
+		.preloader {
+		  position: fixed;
+		  top: 0;
+		  left: 0;
+		  display: flex;
+		  align-items: center;
+		  justify-content: center;
+		  height: 100vh;
+		  width: 100%;
+		  background-color: #fff;
+		  z-index: 25000;
+		  overflow-y: hidden;
+		}
+	</style>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<link rel="stylesheet" href="css/twentytwenty.css">
 	<link rel="stylesheet" href="css/slick-theme.css">
@@ -18,6 +33,18 @@
 </head>
 <body>
 	
+	<div class="preloader">
+	  <div class="item-1"><div></div></div>
+	  <div class="item-2"><div></div></div>
+	  <div class="item-3"><div></div></div>
+	  <div class="item-4"><div></div></div>
+	  <div class="item-5"><div></div></div>
+	  <div class="item-6"><div></div></div>
+	  <div class="item-7"><div></div></div>
+	  <div class="item-8"><div></div></div>
+	  <div class="item-9"><div></div></div>
+	</div>
+
 
 	<div class="overlay">
 		<div class="modal_dialog">
@@ -399,42 +426,42 @@
 						<h4 class="step_item_title">
 							Заявка
 						</h4>
-						<p class="step_item_text">Вы оставляете заявку на нашем сайте или по телефону</p>
+						<p class="step_item_text">Мы обговариваем вашу заявку на нашем сайт</p>
 					</div>
 					<div class="step_item">
 						<img src="img/step-2.png" alt="Этап" class="step_img">
 						<h4 class="step_item_title">
 							Договор
 						</h4>
-						<p class="step_item_text">Вы оставляете заявку на нашем сайте или по телефону</p>
+						<p class="step_item_text">Подписываем договор о двустороннем сотрудничестве</p>
 					</div>
 					<div class="step_item">
 						<img src="img/step-3.png" alt="Этап" class="step_img">
 						<h4 class="step_item_title">
 							Замер
 						</h4>
-						<p class="step_item_text">Вы оставляете заявку на нашем сайте или по телефону</p>
+						<p class="step_item_text">Наши работники выезжают к вам домой для мерки кухни</p>
 					</div>
 					<div class="step_item">
 						<img src="img/step-4.png" alt="Этап" class="step_img">
 						<h4 class="step_item_title">
 							Дизайн
 						</h4>
-						<p class="step_item_text">Вы оставляете заявку на нашем сайте или по телефону</p>
+						<p class="step_item_text">Мы создаем дизайн европейского стиля с хорошим чувством</p>
 					</div>
 					<div class="step_item">
 						<img src="img/step-5.png" alt="Этап" class="step_img">
 						<h4 class="step_item_title">
 							Производство
 						</h4>
-						<p class="step_item_text">Вы оставляете заявку на нашем сайте или по телефону</p>
+						<p class="step_item_text">Изготавливаем скинали для вашей кухни</p>
 					</div>
 					<div class="step_item">
 						<img src="img/step-6.png" alt="Этап" class="step_img">
 						<h4 class="step_item_title">
 							Монтаж
 						</h4>
-						<p class="step_item_text">Вы оставляете заявку на нашем сайте или по телефону</p>
+						<p class="step_item_text">Делаем финальный монтаж для установки скинали </p>
 					</div>
 				</div>
 			</div>
@@ -618,13 +645,14 @@
 	  src="https://code.jquery.com/jquery-2.2.4.min.js"
 	  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
 	  crossorigin="anonymous"></script>
+	  <script src="js/SmoothScroll.js"></script>
 	  <script src="js/jquery.event.move.js"></script>
 	  <script src="js/jquery.twentytwenty.js"></script>
 	  <script src="js/slick.min.js"></script>
 	  <script src="js/jquery.maskedinput.min.js"></script>
 	  <script src="js/script.js"></script>
 	  <script>
-	  	$(window).load(function() {
+	  	$(document).ready(function() {
 	  		$('.realize_item_image').twentytwenty({
 	  			before_label: 'Без скинали',
 	  			after_label: 'Со скинали'
@@ -649,6 +677,7 @@
 	  		$('.modal_close').click(function() {
 	  			$('.overlay').fadeOut(500);
 	  		});
+	  		$('.preloader').delay(2500).fadeOut(200);
 	  	});
 	  </script>
 </body>
