Последний коммит сайта

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="keywords" content="Фабрика Скинали">
 	<meta name="description" content="Фабрика Скинали является одной из крупнейших компаний мира">
 	<meta name="author" content="adamaka47">
+	<meta property="og:image" content="img/design_after.png">
 	<link rel="icon" href="img/favicon.png" type="image/x-icon" />
 	<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
 	<style>
